// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Email Banner should show default email banner 1`] = `
<Banner
  action={
    Object {
      "content": "Resend Email",
      "onClick": [MockFunction],
    }
  }
  status="info"
  title="Verify your email address"
>
  <p>
    Please click the link in the email we sent you to verify your email address and unlock higher daily sending limits.
  </p>
</Banner>
`;

exports[`Component: Email Banner should show sending sending content 1`] = `
<Banner
  action={
    Object {
      "content": "Sending..",
      "disabled": true,
    }
  }
  status="info"
  title="Verify your email address"
>
  <p>
    Please click the link in the email we sent you to verify your email address and unlock higher daily sending limits.
  </p>
</Banner>
`;
